# OpenGL_

./: .gitignore  CMakeLists.txt  build.bat  main.cpp
res/model/: Ashuka.glb  nier_2b.glb  rei.glb
res/shader/: shaders.shader
src/: Shader.cpp  main.cpp  mesh.cpp  tinyglTF.cpp
src/include/: Shader.h  glError.h  mesh.h  model.h  tinyglTF.h
src/shader/: Shader.h
